python/riengine.py


# Functions
if _lib:
    # bhs_vec4 bhs_vec4_add
    if hasattr(_lib, 'bhs_vec4_add'):
        bhs_vec4_add = _lib.bhs_vec4_add
        bhs_vec4_add.argtypes = [bhs_vec4, bhs_vec4]
        bhs_vec4_add.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_vec4_add not found in library')
    # bhs_vec4 bhs_vec4_sub
    if hasattr(_lib, 'bhs_vec4_sub'):
        bhs_vec4_sub = _lib.bhs_vec4_sub
        bhs_vec4_sub.argtypes = [bhs_vec4, bhs_vec4]
        bhs_vec4_sub.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_vec4_sub not found in library')
    # bhs_vec4 bhs_vec4_scale
    if hasattr(_lib, 'bhs_vec4_scale'):
        bhs_vec4_scale = _lib.bhs_vec4_scale
        bhs_vec4_scale.argtypes = [bhs_vec4, ctypes.c_double]
        bhs_vec4_scale.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_vec4_scale not found in library')
    # bhs_vec4 bhs_vec4_neg
    if hasattr(_lib, 'bhs_vec4_neg'):
        bhs_vec4_neg = _lib.bhs_vec4_neg
        bhs_vec4_neg.argtypes = [bhs_vec4]
        bhs_vec4_neg.restype = 'bhs_vec4'
    else:
        print(f'Warning: Function bhs_vec4_neg not found in library')
    # real_t bhs_vec4_dot_minkowski
    if hasattr(_lib, 'bhs_vec4_dot_minkowski'):
        bhs_vec4_dot_minkowski = _lib.bhs_vec4_dot_minkowski
        bhs_vec4_dot_minkowski.argtypes = [bhs_vec4, bhs_vec4]
        bhs_vec4_dot_minkowski.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_vec4_dot_minkowski not found in library')
    # real_t bhs_vec4_norm2_minkowski
    if hasattr(_lib, 'bhs_vec4_norm2_minkowski'):
        bhs_vec4_norm2_minkowski = _lib.bhs_vec4_norm2_minkowski
        bhs_vec4_norm2_minkowski.argtypes = [bhs_vec4]
        bhs_vec4_norm2_minkowski.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_vec4_norm2_minkowski not found in library')
    # bool bhs_vec4_is_null
    if hasattr(_lib, 'bhs_vec4_is_null'):
        bhs_vec4_is_null = _lib.bhs_vec4_is_null
        bhs_vec4_is_null.argtypes = [bhs_vec4, ctypes.c_double]
        bhs_vec4_is_null.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_vec4_is_null not found in library')
    # bool bhs_vec4_is_timelike
    if hasattr(_lib, 'bhs_vec4_is_timelike'):
        bhs_vec4_is_timelike = _lib.bhs_vec4_is_timelike
        bhs_vec4_is_timelike.argtypes = [bhs_vec4]
        bhs_vec4_is_timelike.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_vec4_is_timelike not found in library')
    # bool bhs_vec4_is_spacelike
    if hasattr(_lib, 'bhs_vec4_is_spacelike'):
        bhs_vec4_is_spacelike = _lib.bhs_vec4_is_spacelike
        bhs_vec4_is_spacelike.argtypes = [bhs_vec4]
        bhs_vec4_is_spacelike.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_vec4_is_spacelike not found in library')
    # bhs_vec3 bhs_vec3_add
    if hasattr(_lib, 'bhs_vec3_add'):
        bhs_vec3_add = _lib.bhs_vec3_add
        bhs_vec3_add.argtypes = [bhs_vec3, bhs_vec3]
        bhs_vec3_add.restype = 'bhs_vec3'
    else:
        print(f'Warning: Function bhs_vec3_add not found in library')
    # bhs_vec3 bhs_vec3_sub
    if hasattr(_lib, 'bhs_vec3_sub'):
        bhs_vec3_sub = _lib.bhs_vec3_sub
        bhs_vec3_sub.argtypes = [bhs_vec3, bhs_vec3]
        bhs_vec3_sub.restype = 'bhs_vec3'
    else:
        print(f'Warning: Function bhs_vec3_sub not found in library')
    # bhs_vec3 bhs_vec3_scale
    if hasattr(_lib, 'bhs_vec3_scale'):
        bhs_vec3_scale = _lib.bhs_vec3_scale
        bhs_vec3_scale.argtypes = [bhs_vec3, ctypes.c_double]
        bhs_vec3_scale.restype = 'bhs_vec3'
    else:
        print(f'Warning: Function bhs_vec3_scale not found in library')
    # real_t bhs_vec3_dot
    if hasattr(_lib, 'bhs_vec3_dot'):
        bhs_vec3_dot = _lib.bhs_vec3_dot
        bhs_vec3_dot.argtypes = [bhs_vec3, bhs_vec3]
        bhs_vec3_dot.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_vec3_dot not found in library')
    # bhs_vec3 bhs_vec3_cross
    if hasattr(_lib, 'bhs_vec3_cross'):
        bhs_vec3_cross = _lib.bhs_vec3_cross
        bhs_vec3_cross.argtypes = [bhs_vec3, bhs_vec3]
        bhs_vec3_cross.restype = 'bhs_vec3'
    else:
        print(f'Warning: Function bhs_vec3_cross not found in library')
    # real_t bhs_vec3_norm
    if hasattr(_lib, 'bhs_vec3_norm'):
        bhs_vec3_norm = _lib.bhs_vec3_norm
        bhs_vec3_norm.argtypes = [bhs_vec3]
        bhs_vec3_norm.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_vec3_norm not found in library')
    # real_t bhs_vec3_norm2
    if hasattr(_lib, 'bhs_vec3_norm2'):
        bhs_vec3_norm2 = _lib.bhs_vec3_norm2
        bhs_vec3_norm2.argtypes = [bhs_vec3]
        bhs_vec3_norm2.restype = ctypes.c_double
    else:
        print(f'Warning: Function bhs_vec3_norm2 not found in library')
    # bhs_vec3 bhs_vec3_normalize
    if hasattr(_lib, 'bhs_vec3_normalize'):
        bhs_vec3_normalize = _lib.bhs_vec3_normalize
        bhs_vec3_normalize.argtypes = [bhs_vec3]
        bhs_vec3_normalize.restype = 'bhs_vec3'
    else:
        print(f'Warning: Function bhs_vec3_normalize not found in library')
    # void bhs_vec3_to_spherical
    if hasattr(_lib, 'bhs_vec3_to_spherical'):
        bhs_vec3_to_spherical = _lib.bhs_vec3_to_spherical
        bhs_vec3_to_spherical.argtypes = [bhs_vec3, ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_double)]
        bhs_vec3_to_spherical.restype = None
    else:
        print(f'Warning: Function bhs_vec3_to_spherical not found in library')
    # bhs_vec3 bhs_vec3_from_spherical
    if hasattr(_lib, 'bhs_vec3_from_spherical'):
        bhs_vec3_from_spherical = _lib.bhs_vec3_from_spherical
        bhs_vec3_from_spherical.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
        bhs_vec3_from_spherical.restype = 'bhs_vec3'
    else:
        print(f'Warning: Function bhs_vec3_from_spherical not found in library')
    # bhs_world_handle bhs_ecs_create_world
    if hasattr(_lib, 'bhs_ecs_create_world'):
        bhs_ecs_create_world = _lib.bhs_ecs_create_world
        bhs_ecs_create_world.argtypes = []
        bhs_ecs_create_world.restype = ctypes.c_void_p
    else:
        print(f'Warning: Function bhs_ecs_create_world not found in library')
    # void bhs_ecs_destroy_world
    if hasattr(_lib, 'bhs_ecs_destroy_world'):
        bhs_ecs_destroy_world = _lib.bhs_ecs_destroy_world
        bhs_ecs_destroy_world.argtypes = [ctypes.c_void_p]
        bhs_ecs_destroy_world.restype = None
    else:
        print(f'Warning: Function bhs_ecs_destroy_world not found in library')
    # bhs_entity_id bhs_ecs_create_entity
    if hasattr(_lib, 'bhs_ecs_create_entity'):
        bhs_ecs_create_entity = _lib.bhs_ecs_create_entity
        bhs_ecs_create_entity.argtypes = [ctypes.c_void_p]
        bhs_ecs_create_entity.restype = 'bhs_entity_id'
    else:
        print(f'Warning: Function bhs_ecs_create_entity not found in library')
    # void bhs_ecs_destroy_entity
    if hasattr(_lib, 'bhs_ecs_destroy_entity'):
        bhs_ecs_destroy_entity = _lib.bhs_ecs_destroy_entity
        bhs_ecs_destroy_entity.argtypes = [ctypes.c_void_p, 'bhs_entity_id']
        bhs_ecs_destroy_entity.restype = None
    else:
        print(f'Warning: Function bhs_ecs_destroy_entity not found in library')
    # void * bhs_ecs_add_component
    if hasattr(_lib, 'bhs_ecs_add_component'):
        bhs_ecs_add_component = _lib.bhs_ecs_add_component
        bhs_ecs_add_component.argtypes = [ctypes.c_void_p, 'bhs_entity_id', 'bhs_component_type', ctypes.c_size_t, ctypes.POINTER('const void')]
        bhs_ecs_add_component.restype = ctypes.c_void_p
    else:
        print(f'Warning: Function bhs_ecs_add_component not found in library')
    # void bhs_ecs_remove_component
    if hasattr(_lib, 'bhs_ecs_remove_component'):
        bhs_ecs_remove_component = _lib.bhs_ecs_remove_component
        bhs_ecs_remove_component.argtypes = [ctypes.c_void_p, 'bhs_entity_id', 'bhs_component_type']
        bhs_ecs_remove_component.restype = None
    else:
        print(f'Warning: Function bhs_ecs_remove_component not found in library')
    # void * bhs_ecs_get_component
    if hasattr(_lib, 'bhs_ecs_get_component'):
        bhs_ecs_get_component = _lib.bhs_ecs_get_component
        bhs_ecs_get_component.argtypes = [ctypes.c_void_p, 'bhs_entity_id', 'bhs_component_type']
        bhs_ecs_get_component.restype = ctypes.c_void_p
    else:
        print(f'Warning: Function bhs_ecs_get_component not found in library')
    # void bhs_ecs_query_init
    if hasattr(_lib, 'bhs_ecs_query_init'):
        bhs_ecs_query_init = _lib.bhs_ecs_query_init
        bhs_ecs_query_init.argtypes = [ctypes.POINTER('bhs_ecs_query'), ctypes.c_void_p, 'bhs_component_mask']
        bhs_ecs_query_init.restype = None
    else:
        print(f'Warning: Function bhs_ecs_query_init not found in library')
    # void bhs_ecs_query_init_cached
    if hasattr(_lib, 'bhs_ecs_query_init_cached'):
        bhs_ecs_query_init_cached = _lib.bhs_ecs_query_init_cached
        bhs_ecs_query_init_cached.argtypes = [ctypes.POINTER('bhs_ecs_query'), ctypes.c_void_p, 'bhs_component_mask']
        bhs_ecs_query_init_cached.restype = None
    else:
        print(f'Warning: Function bhs_ecs_query_init_cached not found in library')
    # bool bhs_ecs_query_next
    if hasattr(_lib, 'bhs_ecs_query_next'):
        bhs_ecs_query_next = _lib.bhs_ecs_query_next
        bhs_ecs_query_next.argtypes = [ctypes.POINTER('bhs_ecs_query'), ctypes.POINTER('bhs_entity_id')]
        bhs_ecs_query_next.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_ecs_query_next not found in library')
    # void bhs_ecs_query_reset
    if hasattr(_lib, 'bhs_ecs_query_reset'):
        bhs_ecs_query_reset = _lib.bhs_ecs_query_reset
        bhs_ecs_query_reset.argtypes = [ctypes.POINTER('bhs_ecs_query')]
        bhs_ecs_query_reset.restype = None
    else:
        print(f'Warning: Function bhs_ecs_query_reset not found in library')
    # void bhs_ecs_query_destroy
    if hasattr(_lib, 'bhs_ecs_query_destroy'):
        bhs_ecs_query_destroy = _lib.bhs_ecs_query_destroy
        bhs_ecs_query_destroy.argtypes = [ctypes.POINTER('bhs_ecs_query')]
        bhs_ecs_query_destroy.restype = None
    else:
        print(f'Warning: Function bhs_ecs_query_destroy not found in library')
    # bool bhs_ecs_entity_has_components
    if hasattr(_lib, 'bhs_ecs_entity_has_components'):
        bhs_ecs_entity_has_components = _lib.bhs_ecs_entity_has_components
        bhs_ecs_entity_has_components.argtypes = [ctypes.c_void_p, 'bhs_entity_id', 'bhs_component_mask']
        bhs_ecs_entity_has_components.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_ecs_entity_has_components not found in library')
    # bool bhs_ecs_save_world
    if hasattr(_lib, 'bhs_ecs_save_world'):
        bhs_ecs_save_world = _lib.bhs_ecs_save_world
        bhs_ecs_save_world.argtypes = [ctypes.c_void_p, ctypes.POINTER('const char')]
        bhs_ecs_save_world.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_ecs_save_world not found in library')
    # bool bhs_ecs_load_world
    if hasattr(_lib, 'bhs_ecs_load_world'):
        bhs_ecs_load_world = _lib.bhs_ecs_load_world
        bhs_ecs_load_world.argtypes = [ctypes.c_void_p, ctypes.POINTER('const char')]
        bhs_ecs_load_world.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_ecs_load_world not found in library')
    # bool bhs_ecs_peek_metadata
    if hasattr(_lib, 'bhs_ecs_peek_metadata'):
        bhs_ecs_peek_metadata = _lib.bhs_ecs_peek_metadata
        bhs_ecs_peek_metadata.argtypes = [ctypes.POINTER('const char'), ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint32]
        bhs_ecs_peek_metadata.restype = ctypes.c_bool
    else:
        print(f'Warning: Function bhs_ecs_peek_metadata not found in library')
    # bool bhs_ecs_update_metadata
